Fixes and updates to get DarkBit working properly with DDCalc 1.1.0 	modified:   Backends/include/gambit/Backends/frontends/DDCalc_1_1_0.hpp 	modified:   Backends/src/frontends/DDCalc_1_1_0.cpp 	modified:   DarkBit/examples/DarkBit_standalone_WIMP.cpp 	modified:   DarkBit/include/gambit/DarkBit/DarkBit_rollcall.hpp 	modified:   DarkBit/src/DirectDetection.cpp 	modified:   cmake/backends.cmake 	modified:   config/backend_locations.yaml.default 	modified:   config/capabilities.dat 	modified:   yaml_files/CMSSM.yaml 	modified:   yaml_files/DarkBit_MSSM7.yaml 	modified:   yaml_files/DarkBit_SingletDM.yaml 	modified:   yaml_files/MSSM7.yaml 	modified:   yaml_files/NUHM1.yaml 	modified:   yaml_files/NUHM2.yaml 	modified:   yaml_files/SingletDM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -178,6 +178,9 @@ ObsLikes:
     - capability: XENON100_2012_LogLikelihood
       purpose:    LogLike
 
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+
     - capability: LUX_2015_LogLikelihood
       purpose:    LogLike
 
@@ -191,6 +194,9 @@ ObsLikes:
       purpose:    LogLike
 
     - capability: PICO_60_F_LogLikelihood
+      purpose:    LogLike
+
+    - capability: PICO_60_2017_LogLikelihood
       purpose:    LogLike
 
     - capability: SuperCDMS_2014_LogLikelihood
