--- a/yaml_files/SingletDM.yaml
+++ b/yaml_files/SingletDM.yaml
@@ -110,6 +110,9 @@ ObsLikes:
     - capability: XENON100_2012_LogLikelihood
       purpose:    LogLike
 
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+
     - capability: LUX_2015_LogLikelihood
       purpose:    LogLike
 
