--- a/yaml_files/DarkBit_MSSM7.yaml
+++ b/yaml_files/DarkBit_MSSM7.yaml
@@ -173,6 +173,9 @@ ObsLikes:
     - capability: XENON100_2012_LogLikelihood
       purpose:    LogLike
 
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+
     - capability: LUX_2013_LogLikelihood
       purpose:    LogLike
 
@@ -195,6 +198,9 @@ ObsLikes:
       purpose:    LogLike
 
     - capability: PICO_60_F_LogLikelihood
+      purpose:    LogLike
+
+    - capability: PICO_60_2017_LogLikelihood
       purpose:    LogLike
 
     # Calculate all IceCube likelihoods (including 22 string)
