--- a/yaml_files/DarkBit_SingletDM.yaml
+++ b/yaml_files/DarkBit_SingletDM.yaml
@@ -159,6 +159,9 @@ ObsLikes:
     - capability: XENON100_2012_LogLikelihood
       purpose:    LogLike
 
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+
     - capability: LUX_2013_LogLikelihood
       purpose:    LogLike
 
