Harmonised DarkBit and SpecBit changes to example yaml files 	modified:   DecayBit/src/DecayBit.cpp 	modified:   yaml_files/DarkBit_MSSM7.yaml 	modified:   yaml_files/DecayBit_MSSM20.yaml 	modified:   yaml_files/DecayBit_SingletDM.yaml 	modified:   yaml_files/PrecisionBit_MSSM20.yaml 	modified:   yaml_files/SUSYHD_test.yaml

--- a/yaml_files/DecayBit_MSSM20.yaml
+++ b/yaml_files/DecayBit_MSSM20.yaml
@@ -97,6 +97,9 @@ Rules:
       Higgs_predictions_source: 1
       Higgs_predictions_error_method: 4
 
+  - capability: prec_mh
+    function: FH_HiggsMass
+
   #- function: SUSY_HIT_1_5_init
   #  options:
   #    debug_SLHA_filenames:
