--- a/yaml_files/PrecisionBit_MSSM20.yaml
+++ b/yaml_files/PrecisionBit_MSSM20.yaml
@@ -124,6 +124,9 @@ Rules:
   - capability: MSSM_spectrum
     function: make_MSSM_precision_spectrum_H_W
 
+  - capability: prec_mh
+    function: FH_HiggsMass
+
   - capability: muon_gm2_SM
     function: gm2_SM_ee
 
