--- a/yaml_files/DarkBit_MSSM7.yaml
+++ b/yaml_files/DarkBit_MSSM7.yaml
@@ -494,16 +494,23 @@ Rules:
   # Choose where to get the precision spectrum from
   - capability: MSSM_spectrum
     type: Spectrum
-    function: make_MSSM_precision_spectrum_none
+    #function: make_MSSM_precision_spectrum_none
     #function: make_MSSM_precision_spectrum_W
     #function: make_MSSM_precision_spectrum_H_W
-    # The following options only have an impact when using make_MSSM_precision_spectrum_H_W.
-    # Choose to take FeynHiggs' prediction for the Higgs mass (rather then FlexibleSUSY's).
-    # Choose to use the difference between the FeynHiggs and spectrum generator predictions, along
-    # with the FH error estimate, to estimate the theoretical error on the prediction.
-    #options:
-    #  Higgs_predictions_source: 1
-    #  Higgs_predictions_error_method: 4
+    function: make_MSSM_precision_spectrum_4H_W
+    # The following options only have an impact when using make_MSSM_precision_spectrum_H_W
+    # or make_MSSM_precision_spectrum_H_W.
+    # Choose to take the precision prediction for the Higgs mass(es) (rather then spectrum generator's).
+    # Choose to use the difference between the precision and spectrum generator predictions, along
+    # with the precision error estimate, to estimate the theoretical error on the prediction.
+    options:
+      Higgs_predictions_source: 1
+      Higgs_predictions_error_method: 4
+
+  # Choose to get the precision value of the SM-like Higgs mass from FeynHiggs or SUSYHD
+  - capability: prec_mh
+    function: FH_HiggsMass
+    #function: SHD_HiggsMass
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
