--- a/yaml_files/DecayBit_SingletDM.yaml
+++ b/yaml_files/DecayBit_SingletDM.yaml
@@ -58,13 +58,14 @@ Rules:
   - capability: SingletDM_spectrum
     function: get_SingletDM_spectrum
 
-    - capability: muon_gm2_SM
-      function: gm2_SM_ee
+  - capability: muon_gm2_SM
+    function: gm2_SM_ee
 
 
 Printer:
 
   printer: ascii
+  options:
     output_file: "results.txt"
 
 
