Modified LFV observables and added 90% and 95% CL options for experimental data  On branch SN_dev  Changes to be committed: 	modified:   FlavBit/data/flav_data.yaml 	modified:   FlavBit/include/gambit/FlavBit/FlavBit_types.hpp 	modified:   FlavBit/include/gambit/FlavBit/Flav_reader.hpp 	modified:   FlavBit/src/FlavBit.cpp 	modified:   FlavBit/src/Flav_reader.cpp

--- a/FlavBit/data/flav_data.yaml
+++ b/FlavBit/data/flav_data.yaml
@@ -1563,10 +1563,12 @@
 
 - name: BR_muegamma
   islimit: true
-  exp_value: 5.7e-13
+  one_sided: false
+  exp_value: -2.2e-13
+  exp_90_CL: 4.2e-13
   exp_stat_error: 0.
   exp_sys_error: 0.
-  exp_source: PDG16
+  exp_source: 1605.05081
   th_error: 0.
   th_error_type: M
   th_error_source:
