Modularized indirect constraints

--- a/yaml_files/SN_dev.yaml
+++ b/yaml_files/SN_dev.yaml
@@ -83,6 +83,42 @@ Scanner:
 
 ObsLikes:
 
+  - capability: lnLbbn
+    purpose: LogLike
+    function: lnL_bbn
+    dependencies:
+      - capability: SMINPUTS
+        type: SMInputs
+      - capability: Theta_sq
+        type: Matrix3d
+
+  - capability: lnLlepuniv
+    purpose: LogLike
+    function: lnL_lepuniv
+    dependencies:
+      - capability: Theta_sq
+        type: Matrix3d
+
+  - capability: lnL0nubb
+    purpose: LogLike
+    function: lnL_0nubb
+    dependencies:
+      - capability: m_nu
+        type: Maatrix3cd
+      - capability: UPMNS
+        type: Matrix3cd
+      - capability: Theta_sq
+        type: Matrix3d
+
+  - capability: lnLckm
+    purpose: LogLike
+    function: lnL_ckm
+    dependencies:
+      - capability: SMINPUTS
+        type: SMInputs
+      - capability: Theta_sq
+        type: Matrix3d
+
   - capability: lnLpienu
     purpose: LogLike
     function: lnL_pienu
@@ -268,69 +304,77 @@ ObsLikes:
     purpose: Observable
     function: printable_Ue1
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Um1
     purpose: Observable
     function: printable_Um1
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Ut1
     purpose: Observable
     function: printable_Ut1
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Ue2
     purpose: Observable
     function: printable_Ue2
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Um2
     purpose: Observable
     function: printable_Um2
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Ut2
     purpose: Observable
     function: printable_Ut2
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Ue3
     purpose: Observable
     function: printable_Ue3
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Um3
     purpose: Observable
     function: printable_Um3
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: Ut3
     purpose: Observable
     function: printable_Ut3
     dependencies:
-      - capability: SN_stuff
+      - capability: Theta_sq
         type: Matrix3d
 
   - capability: lnLikelihood
     purpose: LogLike
     function: lnL
     dependencies:
+      - capability: lnLbbn
+        type: double
+      - capability: lnLlepuniv
+        type: double
+      - capability: lnL0nubb
+        type: double
+      - capability: lnLckm
+        type: double
       - capability: lnLpienu
         type: double
       - capability: lnLps191e
@@ -356,9 +400,12 @@ ObsLikes:
 
 Rules:
 
-  - capability: SN_stuff
+  - capability: Theta_sq
     type: Matrix3d
     function: CI_param
+    dependencies:
+      - capability: SeesawI_Theta
+        type: Matrix3cd
 
 KeyValues:
 
