Added calculations of l -> l l l  observables
 Changes to be committed:
	modified:   FlavBit/data/flav_data.yaml
	modified:   FlavBit/include/gambit/FlavBit/FlavBit_rollcall.hpp
	modified:   FlavBit/src/FlavBit.cpp
	modified:   NeutrinoBit/include/gambit/NeutrinoBit/NeutrinoBit_rollcall.hpp
	modified:   NeutrinoBit/src/NeutrinoBit.cpp
	modified:   yaml_files/SN_dev.yaml

--- a/yaml_files/SN_dev.yaml
+++ b/yaml_files/SN_dev.yaml
@@ -69,7 +69,7 @@ Printer:
   printer: hdf5
   options:
     output_file: "SN_dev.hdf5"
-    delete_file_if_exists: true
+    delete_file_on_restart: true
 
 Scanner:
 
@@ -397,6 +397,15 @@ ObsLikes:
         type: double
       - capability: lnLtau
         type: double
+
+  - capability: l2lgamma_lnL
+    purpose: LogLike
+    function: l2lgamma_likelihood
+
+  - capability: l2lll_lnL
+    purpose: LogLike
+    function: l2lll_likelihood
+   
 
 Rules:
 
