--- a/FlavBit/data/flav_data.yaml
+++ b/FlavBit/data/flav_data.yaml
@@ -1605,7 +1605,9 @@
 
 - name: BR_mueee
   islimit: true
-  exp_value: 1.0e-12
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 1.0e-12
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1617,7 +1619,9 @@
 
 - name: BR_taueee
   islimit: true
-  exp_value: 2.7e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 2.7e-8
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1629,7 +1633,9 @@
 
 - name: BR_taueemu_ss
   islimit: true
-  exp_value: 1.8e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 1.8e-8
   exp_stat_error: 0. 
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1641,7 +1647,9 @@
 
 - name: BR_taueemu_os
   islimit: true
-  exp_value: 1.5e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 1.5e-8
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1653,7 +1661,9 @@
 
 - name: BR_tauemumu_ss
   islimit: true
-  exp_value: 2.7e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 2.7e-8
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1665,7 +1675,9 @@
 
 - name: BR_tauemumu_os
   islimit: true
-  exp_value: 1.7e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 1.7e-8
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1677,7 +1689,9 @@
 
 - name: BR_taumumumu
   islimit: true
-  exp_value: 2.1e-8
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 2.1e-8
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1689,7 +1703,9 @@
 
 - name: R_mueTi
   islimit: true
-  exp_value: 4.3e-12
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 4.3e-12
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1701,7 +1717,9 @@
 
 - name: R_mueS
   islimit: true
-  exp_value: 7.0e-11
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 7.0e-11
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
@@ -1713,7 +1731,9 @@
 
 - name: R_muePb
   islimit: true
-  exp_value: 4.6e-11
+  one_sided: false
+  exp_value: 0.
+  exp_90_CL: 4.6e-11
   exp_stat_error: 0.
   exp_sys_error: 0.
   exp_source: PDG16
