--- a/yaml_files/DarkBit_MSSM7.yaml
+++ b/yaml_files/DarkBit_MSSM7.yaml
@@ -379,11 +379,11 @@ Rules:
       # If the below is false, the squark propagator is approximated as 1/m_sq^2
       # (automatically set to true if loop = true)
       # pole: false
-    # function: DD_couplings_MicrOmegas
-    # options:
-    #   If the below is true, the box diagram for gluon-neutralino as discussed in 
-    #   arXiv:0803.2360 is included in the calculation
-    #   loop: box
+    function: DD_couplings_MicrOmegas
+    options:
+      # If the below is true, the box diagram for gluon-neutralino scattering as 
+      # discussed in arXiv:0803.2360 is included in the calculation
+      loop: box
 
   # Nuclear SI Parameter Likelihoods (All values in MeV)
   - capability: lnL_SI_nuclear_parameters
