Added the ability to specify parameter order in the grid scanner.
	modified:   ScannerBit/include/gambit/ScannerBit/base_prior.hpp
	modified:   ScannerBit/include/gambit/ScannerBit/priors/fixed_same_as.hpp
	modified:   ScannerBit/src/priors/composite.cpp
	modified:   ScannerBit/src/scanners/simple/grid.cpp
	modified:   config/scanners.dat
	modified:   yaml_files/ScannerBit.yaml

--- a/yaml_files/ScannerBit.yaml
+++ b/yaml_files/ScannerBit.yaml
@@ -93,7 +93,8 @@ Scanner:
       plugin: grid
       version: ">=1.0"
       like: LogLike
-      grid_pts: [5, 5]
+      grid_pts: [5, 3]
+      parameters: ["EggBox::param_1", "EggBox::param_0"]
 
     multinest:
       plugin: multinest
